--- a/components/src/App.css
+++ b/components/src/App.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+
 .App {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   text-align: center;
 }
+
