script works, still slightly buggy

--- a/components/src/SideNav/styles.css
+++ b/components/src/SideNav/styles.css
@@ -1,4 +1,3 @@
-
 .toolbar {
     /* position: fixed; */
     top: 0;
@@ -18,6 +17,7 @@
   .toolbar__logo {
     font-size: 2em;
     margin-left: 1em;
+    font-family: "Sriracha";
   }
   
   .toolbar__logo a {
@@ -35,6 +35,7 @@
     margin: 0;
     padding: 0;
     display: flex;
+    font-family: "Comfortaa";
   }
   
   .toolbar__navigation-items li {
@@ -72,7 +73,7 @@
     color: white;
   }
   
-  .side-drawer {
+  .side-panel {
     height: 100%;
     background: white;
     box-shadow: 1px 0px 7px rgba(0,0,0,.5);
@@ -86,46 +87,56 @@
     transition: transform .3s ease-out;
   }
   
-  .side-drawer.open {
+  .side-panel.open {
     transform: translateX(0);
     
   }
   
-  .side-drawer ul {
+  .side-panel ul {
     height: 100%;
+    padding-top: 50px;
     list-style: none;
     display: flex;
+    flex-grow: 1;
     flex-direction: column;
-    justify-content: center;
-    text-align: left;
+    align-items: center;
+    align-content: center;
+    justify-content: flex-start;
+    text-align: right;
+    overflow: hidden;
   }
   
-  .side-drawer li {
-    /* margin: 0.5rem 0; */
+  .side-panel li {
+    width: 100%;
+    padding-right: 3rem;
     padding-top: 1em;
     height: 3em;
     border-bottom: 1px solid darkslategray;
   }
+  .side-panel li:hover {
+    box-shadow: inset 0 0 10px rgba(0,0,0,.3);
+  }
 
-  .side-drawer li:hover {
-    /* margin: 0.5rem 0; */
-    padding-top: 1em;
-    height: 3em;
-    background: darkslategray;
-    color: white;
-  }
-  .side-drawer li:hover a {
-    color: white;
-  }
   
-  .side-drawer a {
-    color: #521751;
-    text-decoration: none;
+  .side-panel li a {    
+    color: #00001a;
+    text-decoration: rgba(0,0,0,.3);
     font-size: 1.2rem;
-    padding-left: 3em;
+    padding-right: 3em;
+    transition: font-size .1s, letter-spacing .1s;
+    font-family: "Sriracha";
+  }
+  .side-panel li:hover a {
+    padding-right: 1em;
+    color: black;
+    letter-spacing: .5em;
+    font-size: 2em;
+    font-variant: small-caps;
+    animation: wiggle .5s infinite;
   }
   
-  .backdrop {
+  
+  .background {
     position: fixed;
     width: 100%;
     height: 100%;
@@ -135,8 +146,8 @@
     z-index: 100;
   }
   
-  .side-drawer a:hover,
-  .side-drawer a:active {
+  .side-panel a:hover,
+  .side-panel a:active {
     color: #fa923f;
   }
   
@@ -145,3 +156,18 @@
       display: none;
     }
   }
+
+@keyframes wiggle {
+  0% {
+    transform: skewX(0);
+  }
+  70% {
+    transform: skewX(-10deg);
+  }
+  95% {
+    transform: skewX(-5deg);
+  }
+  100% {
+    transform: skewX(0);
+  }
+}
