--- a/components/src/ParaLanding/styles.css
+++ b/components/src/ParaLanding/styles.css
@@ -6,7 +6,7 @@
     height: 100%; 
 }
 
-.heading {
+.heading h1 {
     position: absolute;
     font-size: 5vw;
     left: 26vw;
@@ -15,7 +15,8 @@
 
 .firstpage {
     font-family: 'Architects Daughter';
-    background: black;
+    background:#000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
+    z-index:0;
     color: white;
     width: 100%;
     position: fixed;
@@ -23,31 +24,50 @@
     bottom: 0;         
     left: 0;     
     right: 0;                
-    z-index: 2;
+    z-index: 10;
+    display: block;
+}
+
+.twinkling {
+    background: transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat top center;
+    /* z-index: 2;   */
+    height: 100%;
+    width: 100%;
+    -moz-animation: move-twink-back 200s linear infinite;
+    -ms-animation: move-twink-back 200s linear infinite;
+    -o-animation: move-twink-back 200s linear infinite;
+    -webkit-animation: move-twink-back 200s linear infinite;
+    animation: move-twink-back 200s linear infinite;
 }
 
 .level-one,
 .level-two,
-.level-three,
-.level-four {
+.level-three{
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
+    perspective: 100px;
 }
 
 .block-one {
-    background: #c3af9d;
+    background: url('../public/Grass.jpg') center center;
+    /* transform-style: preserve-3d; */
+    transform: rotateX(75deg);
+    background-size: auto;
+    background-repeat: repeat;
     position: absolute;
     bottom: -10vh;
-    left: 0;
-    width: 100%;
-    height: 40vh;
-    transform: skewY(-2deg);
+    left: -125vh;
+    width: 250%;
+    /* height: 40vh; */
+    /* transform: skewY(-2deg); */
 }
+
 .block-two {
-    background: #ab805c;
+    background: url('../public/Mountain1.jpg') center center;
+    background-size: contain;
     position: absolute;
     bottom: -45vh;
     left: -30vw;
@@ -56,7 +76,8 @@
     transform: skewY(40deg);
 }
 .block-three {
-    background: #6d5a44;
+    background: url('../public/Mountain2.jpg') center center;
+    background-size: contain;
     position: absolute;
     bottom: -45vh;
     left: 0;
@@ -66,7 +87,7 @@
 }
 
 .secondpage {
-    background: #cabaad;
+    background: black;
   }
 
 .secondpage h1 {
@@ -75,6 +96,7 @@
 }
 
 .secondpage h1 span {
+    font-size: 2em;
     display: inline-block;
 }
 
@@ -88,52 +110,69 @@
 
 .thirdpage {         
     transform: translate3d(0, 300vh, 0);
-    background: #231f20;
+    background: linear-gradient(#000000, #00001a);
     padding-top: 50px;     
-  }              
+}              
   
 .thirdpage .title {       
-display: flex;     
-align-items: center;  
-justify-content: center;
-font-size: 2vw;     
+    display: flex;     
+    align-items: center;  
+    justify-content: center;
+    font-size: 2vw;     
 }                    
 
 .thirdpage .imgs {   
-margin: 100px 0;
-position: relative;
+    margin: 100px 0;
+    position: relative;
 }              
                             
 .img {     
-position: absolute; 
-display: block;    
-top: 10vw;         
+    position: absolute; 
+    display: block;    
+    top: 10vw;         
 }                
             
 .img1 {         
-left: calc(50vw - 350px);
+    left: calc(50vw - 350px);
 }            
 
 .img2 {           
-left: calc(50vw - 50px);
-top: 16vw;          
+    left: calc(50vw - 50px);
+    top: 16vw;          
 }                    
                                     
 .thirdpage .title h2 {
-color: #c2c2c2;        
+    color: #c2c2c2;        
 } 
 
 .bottom-sect {
-height: 1000px;
+    height: 1000px;
 }
 
 .progress-line {
-position: absolute;
-width: 2px;
-background: red;
-height: 100%;
-left: 5vw;
-top: 0;
-transform: translate3d(0, -100%, 0);
-z-index: 0;
+    position: absolute;
+    width: 2px;
+    background: red;
+    height: 100%;
+    left: 5vw;
+    top: 0;
+    transform: translate3d(0, -100%, 0);
+    z-index: 0;
+}
+
+@keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-webkit-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-moz-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-ms-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
 }
