--- a/components/src/index.css
+++ b/components/src/index.css
@@ -1,6 +1,6 @@
-body {
+/* body {
   margin: 0;
-  height: 5000px;
+  height: 3450px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,4 +11,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
