--- a/components/src/App.css
+++ b/components/src/App.css
@@ -13,13 +13,17 @@
 
 body {
   margin: 0;
-  height: 5000px;
+  height: 3450px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+/* body::-webkit-scrollbar {
+  display: none;
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
