--- a/components/src/ParaLanding/styles.css
+++ b/components/src/ParaLanding/styles.css
@@ -3,8 +3,9 @@
     top: 0;           
     left: 0;                  
     width: 100%;            
-    height: 100%; 
+    height: 100%;
 }
+
 
 .heading h1 {
     position: absolute;
@@ -48,7 +49,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    perspective: 100px;
+    /* perspective: 100px; */
 }
 
 .block-one {
@@ -69,11 +70,19 @@
     background: url('../public/Mountain1.jpg') center center;
     background-size: contain;
     position: absolute;
-    bottom: -45vh;
+    height: 5em;
+    width: 5em;
+    top: 33vh;
+    left: 25vh;
+    background: radial-gradient(circle at 100px 100px, #5cabff, #000);
+    
+    border-radius: 100%;
+    box-shadow: inset 0 0 10px rgb(0,0,0,.25);
+    
+    /* bottom: -45vh;
     left: -30vw;
     width: 100%;
-    height: 100vh;
-    transform: skewY(40deg);
+    height: 100vh;*/
 }
 .block-three {
     background: url('../public/Mountain2.jpg') center center;
@@ -87,17 +96,29 @@
 }
 
 .secondpage {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     background: black;
-  }
+}
+
+.secondpage .heading {
+    margin: 0 auto;
+    width: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
 
 .secondpage h1 {
     color: #fdeabf;
     transform: scale(1.35);
 }
 
+
 .secondpage h1 span {
-    font-size: 2em;
-    display: inline-block;
+    font-size: .5em;
+    padding-bottom: 50px;
 }
 
 .image {
@@ -110,7 +131,7 @@
 
 .thirdpage {         
     transform: translate3d(0, 300vh, 0);
-    background: linear-gradient(#000000, #00001a);
+    background: linear-gradient(rgb(0,0,26,0), rgb(0,0,26,1));
     padding-top: 50px;     
 }              
   
@@ -124,6 +145,10 @@
 .thirdpage .imgs {   
     margin: 100px 0;
     position: relative;
+    display: flex; 
+    flex-direction: row;    
+    align-items: center;  
+    justify-content: space-between;
 }              
                             
 .img {     
@@ -133,12 +158,12 @@
 }                
             
 .img1 {         
-    left: calc(50vw - 350px);
+    left: calc(10vw + 350px);
 }            
 
 .img2 {           
-    left: calc(50vw - 50px);
-    top: 16vw;          
+    left: calc(10vw - 50px);
+    top: 40vw;          
 }                    
                                     
 .thirdpage .title h2 {
