--- a/components/src/StarRating/style.css
+++ b/components/src/StarRating/style.css
@@ -1,5 +1,6 @@
 .star-container {
-    height: 100px;
+    /* height: 100px; */
+    width: auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -9,8 +10,61 @@
 .star {
     color: black;
     font-size: 1.5em;
+    border-radius: 50%; 
+    box-shadow: 0 0 .5px rgb(127, 153, 127, 0), 
+                0 0 1px rgb(127, 153, 127, 0),  
+                0 0 1.5px rgb(127, 153, 127, 0),  
+                0 0 3px rgb(127, 153, 127, 0),  
+                0 0 2.5px rgb(127, 153, 127, 0), 
+                0 0 3px rgb(127, 153, 127, 0), 
+                0 0 3.5px rgb(127, 153, 127, 0); 
+    transition: .1s;
+    
 }
 
 .star:hover {
     font-size: 2em;
+    animation: pulsate .5s infinite, fade .5s infinite, wiggle 0.5s infinite;
+    -webkit-animation: pulsate .5s infinite, fade .5s infinite, wiggle 0.5s infinite;
+    -moz-animation: pulsate .5s infinite, fade .5s infinite, wiggle 0.5s infinite;
+}
+
+.star:active {
+    box-shadow: 0 0 0 .75px rgb(83, 224, 83, .25),  
+    0 0 0 1.5px rgb(83, 224, 83, .25), 
+    0 0 0 2.25px rgb(83, 224, 83, .25), 
+    0 0 0 3px rgb(82, 226, 82, .25),  
+    0 0 0 10px rgb(37, 214, 37, .25), 
+    0 0 0 12.5px rgb(27, 165, 27, .25),  
+    0 0 0 15px rgb(63, 235, 63, .25); 
+}
+
+@keyframes pulsate {
+    0% {
+        transform: scale(.7);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(.7);
+    }
+}
+
+@keyframes fade {
+    0% {
+        opacity: 0.6;
+    }
+    50% {        
+        opacity: 1;
+    }
+    100% {
+        opacity: 0.6;        
+    }
+}
+
+@keyframes wiggle {
+	0% {transform:rotate(4deg);}
+	50% {transform:rotate(-4deg);}
+	100% {transform:rotate(4deg);}
 }
