--- a/components/src/DataList/styles.css
+++ b/components/src/DataList/styles.css
@@ -2,7 +2,7 @@
 ul {
     list-style-type: none;
 }
-li:nth-child(odd) {
+/* li:nth-child(odd) {
     background-color: black;
     color: white;
-}
+} */
